RESOLVED FIXED107536
[EFL] Fix context menu localized string
https://bugs.webkit.org/show_bug.cgi?id=107536
Summary [EFL] Fix context menu localized string
Michal Pakula vel Rutka
Reported 2013-01-22 02:36:26 PST
One of localized string has a marker. Since EFL port does not support them it has to be removed, so the string will be displayed properly.
Attachments
patch (1.28 KB, patch)
2013-01-22 02:39 PST, Michal Pakula vel Rutka
no flags
Michal Pakula vel Rutka
Comment 1 2013-01-22 02:39:17 PST
Grzegorz Czajkowski
Comment 2 2013-01-22 05:44:16 PST
LGTM.
Laszlo Gombos
Comment 3 2013-01-22 06:04:02 PST
Comment on attachment 183943 [details] patch r=me.
WebKit Review Bot
Comment 4 2013-01-22 06:22:13 PST
Comment on attachment 183943 [details] patch Clearing flags on attachment: 183943 Committed r140419: <http://trac.webkit.org/changeset/140419>
WebKit Review Bot
Comment 5 2013-01-22 06:22:18 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.