[EFL] Fix context menu localized string https://bugs.webkit.org/show_bug.cgi?id=107536

One of localized string has a marker. Since EFL port does not support them
it has to be removed, so the string will be displayed properly.

Patch by Michał Pakuła vel Rutka <m.pakula@samsung.com> on 2013-01-22
Reviewed by Laszlo Gombos.

* platform/efl/LocalizedStringsEfl.cpp:
(WebCore::contextMenuItemTagCheckSpellingWhileTyping)

Canonical link: https://commits.webkit.org/125768@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140419 268f45cc-cd09-0410-ab3c-d52691b4dbfc